--- a/src/app/components/marketplace/marketplace.component.html
+++ b/src/app/components/marketplace/marketplace.component.html
@@ -2,7 +2,7 @@
 ">
     <h6 style="font-weight: bold; "><u>**ToonVerse Marketplace**</u> </h6>
 
-    <table class="table align-middle mb-0 bg-white" style="width: auto;">
+    <table class="table align-middle bg-white" style="width: auto;margin: 50px; margin-bottom: 100px;">
         <thead class="bg-light">
             <tr>
                 <th>Project</th>
