--- a/src/app/components/fruittown/fruittown.component.html
+++ b/src/app/components/fruittown/fruittown.component.html
@@ -191,7 +191,7 @@
                         <br>
                         <br>
 
-                        <button class="styled">
+                        <button (click)="becomeOwnerWithEth()" class="styled">
                             Become Owner
                         </button>
 
@@ -210,7 +210,7 @@
                             width="25" />{{priceOfContractToon}}
                         <br>
                         <br>
-                        <button class="styled">
+                        <button (click)="becomeOwnerWithToon()" class="styled">
                             Become Owner
 
                         </button>
