--- a/src/app/components/fruittown/fruittown.component.html
+++ b/src/app/components/fruittown/fruittown.component.html
@@ -18,8 +18,8 @@
         </figcaption>
     </figure>
     <br>
-    <img id="gremlins-img" src="../../../assets/toonverse/fruitgremlins.wtf/fruitTownGremlins.gif " alt="logo"
-        width="95%" height="180vh" style="border-radius: 75%;object-fit: contain;" /><br><br>
+    <img id="gremlins-img" src="../../../assets/toonverse/fruitgremlins.wtf/ftgBanner2.png " alt="logo"
+        width="95%" height="180vh" style="object-fit: contain;" /><br><br>
     <figure class="text-center">
         <blockquote class="blockquote">
             <p>
