--- a/src/app/components/marketplace/marketplace.component.html
+++ b/src/app/components/marketplace/marketplace.component.html
@@ -2,6 +2,7 @@
 ">
     <h6 style="font-weight: bold; "><u>**ToonVerse Marketplace**</u> </h6>
 
+    <div class="container">
     <table class="table align-middle bg-white" style="width: auto;margin: 50px; margin-bottom: 100px;">
         <thead class="bg-light">
             <tr>
@@ -135,4 +136,5 @@
             </tr>
         </tbody>
     </table>
+</div>
 </div>
